syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "service_boilerplate/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/helloworld/{id}"
    };
  }
  rpc SayHelloAsync (HelloRequest) returns (HelloReplyAsync) {
    option (google.api.http) = {
      get: "/helloworldasync/{id}"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string id = 1;
  string hello = 2;
}

// The response message containing the greetings
message HelloReply {
  string id = 1;
  string hello = 2;
  google.protobuf.Timestamp created_at = 3;
}

message HelloReplyAsync {
  string message = 1;
}
